--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -1,3 +1,33 @@
-h1 {
-  color: red;
+.login {
+  background-color: #2D1E2F;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.logo-block {
+  flex-direction: column;
+  text-align: center;
+
+  .title {
+    color: #FFFFFF;
+    font-size: 36px;
+  }
+}
+
+.info-block {
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  opacity: 0.9;
+
+  .el-form-item {
+    margin-bottom: 8px;
+
+    .submit {
+      margin: 24px 0 16px;
+      width: 100%;
+    }
+  }
 }
