--- a/theme/select.css
+++ b/theme/select.css
@@ -14,6 +14,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -132,6 +133,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -244,6 +246,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -362,6 +365,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -474,6 +478,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -592,6 +597,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -828,6 +834,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -946,6 +953,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -1313,6 +1321,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -1431,6 +1440,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -1570,15 +1580,15 @@
       background-color: #909399;
       color: #fff; }
   .el-tag--success {
-    background-color: rgba(103, 194, 58, 0.1);
-    border-color: rgba(103, 194, 58, 0.2);
-    color: #67c23a; }
+    background-color: rgba(0, 188, 126, 0.1);
+    border-color: rgba(0, 188, 126, 0.2);
+    color: #00BC7E; }
     .el-tag--success.is-hit {
-      border-color: #67c23a; }
+      border-color: #00BC7E; }
     .el-tag--success .el-tag__close {
-      color: #67c23a; }
+      color: #00BC7E; }
     .el-tag--success .el-tag__close:hover {
-      background-color: #67c23a;
+      background-color: #00BC7E;
       color: #fff; }
   .el-tag--warning {
     background-color: rgba(230, 162, 60, 0.1);
@@ -1640,6 +1650,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -1758,6 +1769,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -1894,6 +1906,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -2012,6 +2025,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -2151,6 +2165,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -2269,6 +2284,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
