--- a/theme/alert.css
+++ b/theme/alert.css
@@ -14,6 +14,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -132,6 +133,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -252,10 +254,10 @@
     -ms-flex-pack: center;
     justify-content: center; }
   .el-alert--success {
-    background-color: #f0f9eb;
-    color: #67c23a; }
+    background-color: #e6f8f2;
+    color: #00BC7E; }
     .el-alert--success .el-alert__description {
-      color: #67c23a; }
+      color: #00BC7E; }
   .el-alert--info {
     background-color: #f4f4f5;
     color: #909399; }
