--- a/theme/form.css
+++ b/theme/form.css
@@ -14,6 +14,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -132,6 +133,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -337,11 +339,11 @@
   .el-form-item.is-success .el-input__inner, .el-form-item.is-success .el-input__inner:focus,
   .el-form-item.is-success .el-textarea__inner,
   .el-form-item.is-success .el-textarea__inner:focus {
-    border-color: #67c23a; }
+    border-color: #00BC7E; }
   .el-form-item.is-success .el-input-group__append .el-input__inner,
   .el-form-item.is-success .el-input-group__prepend .el-input__inner {
     border-color: transparent; }
   .el-form-item.is-success .el-input__validateIcon {
-    color: #67c23a; }
+    color: #00BC7E; }
   .el-form-item--feedback .el-input__validateIcon {
     display: inline-block; }
