--- a/theme/message-box.css
+++ b/theme/message-box.css
@@ -14,6 +14,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -132,6 +133,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -244,6 +246,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -402,6 +405,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -512,6 +516,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -624,6 +629,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -851,42 +857,42 @@
         border-color: #d9ecff; }
   .el-button--success {
     color: #fff;
-    background-color: #67c23a;
-    border-color: #67c23a; }
+    background-color: #00BC7E;
+    border-color: #00BC7E; }
     .el-button--success:hover, .el-button--success:focus {
-      background: #85ce61;
-      border-color: #85ce61;
+      background: #33c998;
+      border-color: #33c998;
       color: #fff; }
     .el-button--success:active {
-      background: #5daf34;
-      border-color: #5daf34;
+      background: #00a971;
+      border-color: #00a971;
       color: #fff;
       outline: none; }
     .el-button--success.is-active {
-      background: #5daf34;
-      border-color: #5daf34;
+      background: #00a971;
+      border-color: #00a971;
       color: #fff; }
     .el-button--success.is-disabled, .el-button--success.is-disabled:hover, .el-button--success.is-disabled:focus, .el-button--success.is-disabled:active {
       color: #fff;
-      background-color: #b3e19d;
-      border-color: #b3e19d; }
+      background-color: #80debf;
+      border-color: #80debf; }
     .el-button--success.is-plain {
-      color: #67c23a;
-      background: #f0f9eb;
-      border-color: #c2e7b0; }
+      color: #00BC7E;
+      background: #e6f8f2;
+      border-color: #99e4cb; }
       .el-button--success.is-plain:hover, .el-button--success.is-plain:focus {
-        background: #67c23a;
-        border-color: #67c23a;
+        background: #00BC7E;
+        border-color: #00BC7E;
         color: #fff; }
       .el-button--success.is-plain:active {
-        background: #5daf34;
-        border-color: #5daf34;
+        background: #00a971;
+        border-color: #00a971;
         color: #fff;
         outline: none; }
       .el-button--success.is-plain.is-disabled, .el-button--success.is-plain.is-disabled:hover, .el-button--success.is-plain.is-disabled:focus, .el-button--success.is-plain.is-disabled:active {
-        color: #a4da89;
-        background-color: #f0f9eb;
-        border-color: #e1f3d8; }
+        color: #66d7b2;
+        background-color: #e6f8f2;
+        border-color: #ccf2e5; }
   .el-button--warning {
     color: #fff;
     background-color: #e6a23c;
@@ -1135,6 +1141,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -1253,6 +1260,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -1679,7 +1687,7 @@
       padding-left: 36px;
       padding-right: 12px; }
     .el-message-box__status.el-icon-success {
-      color: #67c23a; }
+      color: #00BC7E; }
     .el-message-box__status.el-icon-info {
       color: #909399; }
     .el-message-box__status.el-icon-warning {
