--- a/theme/message.css
+++ b/theme/message.css
@@ -14,6 +14,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -132,6 +133,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -265,10 +267,10 @@
   .el-message--info .el-message__content {
     color: #909399; }
   .el-message--success {
-    background-color: #f0f9eb;
-    border-color: #e1f3d8; }
+    background-color: #e6f8f2;
+    border-color: #ccf2e5; }
     .el-message--success .el-message__content {
-      color: #67c23a; }
+      color: #00BC7E; }
   .el-message--warning {
     background-color: #fdf6ec;
     border-color: #faecd8; }
@@ -301,7 +303,7 @@
     .el-message__closeBtn:hover {
       color: #909399; }
   .el-message .el-icon-success {
-    color: #67c23a; }
+    color: #00BC7E; }
   .el-message .el-icon-error {
     color: #f56c6c; }
   .el-message .el-icon-info {
