--- a/theme/progress.css
+++ b/theme/progress.css
@@ -14,6 +14,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -132,6 +133,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -265,9 +267,9 @@
     padding-right: 0;
     margin-right: 0; }
   .el-progress.is-success .el-progress-bar__inner {
-    background-color: #67c23a; }
+    background-color: #00BC7E; }
   .el-progress.is-success .el-progress__text {
-    color: #67c23a; }
+    color: #00BC7E; }
   .el-progress.is-exception .el-progress-bar__inner {
     background-color: #f56c6c; }
   .el-progress.is-exception .el-progress__text {
