--- a/theme/tag.css
+++ b/theme/tag.css
@@ -14,6 +14,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -132,6 +133,7 @@
 /* c6e2ff */
 /* d9ecff */
 /* ecf5ff */
+/* #67c23a -> origin one */
 /* Link
 -------------------------- */
 /* Background
@@ -271,15 +273,15 @@
       background-color: #909399;
       color: #fff; }
   .el-tag--success {
-    background-color: rgba(103, 194, 58, 0.1);
-    border-color: rgba(103, 194, 58, 0.2);
-    color: #67c23a; }
+    background-color: rgba(0, 188, 126, 0.1);
+    border-color: rgba(0, 188, 126, 0.2);
+    color: #00BC7E; }
     .el-tag--success.is-hit {
-      border-color: #67c23a; }
+      border-color: #00BC7E; }
     .el-tag--success .el-tag__close {
-      color: #67c23a; }
+      color: #00BC7E; }
     .el-tag--success .el-tag__close:hover {
-      background-color: #67c23a;
+      background-color: #00BC7E;
       color: #fff; }
   .el-tag--warning {
     background-color: rgba(230, 162, 60, 0.1);
