--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -1,5 +1,35 @@
+@keyframes monitorInFromTop {
+  from {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes monitorInFromBelow {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+#logo {
+  animation: monitorInFromTop 1s ease-in-out forwards;
+  /* assign animation to monitor with 'monitorIn' as keyframe name */
+  opacity: 0;
+}
+
 .login {
-  background-color: #2D1E2F;
+  background-color: #FBFBFF;
   height: 100%;
   width: 100%;
   display: flex;
@@ -12,22 +42,20 @@
   text-align: center;
 
   .title {
-    color: #FFFFFF;
+    animation: monitorInFromBelow 2s ease-in-out forwards;
+    color: #00BC7E;
     font-size: 36px;
+    opacity: 0;
   }
 }
 
-.info-block {
-  background-color: #FFFFFF;
-  border-radius: 5px;
-  opacity: 0.9;
+.submit {
+  margin: 24px 0 16px;
+  width: 100%;
 
-  .el-form-item {
-    margin-bottom: 8px;
-
-    .submit {
-      margin: 24px 0 16px;
-      width: 100%;
-    }
+  &:hover {
+    box-shadow: 4px 4px #00BC7E;
+    -webkit-transform: translateX(-4px);
+    transform: translateX(-4px);
   }
 }
