--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -34,7 +34,7 @@
   background-image: url('../../assets/images/about_background.png');
   background-repeat: repeat-y;
   background-size: cover;
-  box-shadow: 0 0 8px 8px white inset;
+  box-shadow: 0 0 8px 8px #FBFBFF inset;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 50% 1fr;
