--- a/src/views/Services/Services.scss
+++ b/src/views/Services/Services.scss
@@ -7,6 +7,30 @@
   }
 }
 
+.back {
+  position: absolute;
+  top: 0;
+  transform: rotateY(180deg);
+}
+
+// https://stackoverflow.com/questions/41461101/flip-a-3d-card-with-css
+.card {
+  position: relative;
+  perspective: 30rem;
+
+  &:hover {
+    animation: bounceIn ease-in-out .75s forwards;
+
+    .front {
+      transform: rotateY(180deg);
+    }
+
+    .back {
+      transform: rotateY(360deg);
+    }
+  }
+}
+
 .container {
   height: 100%;
   overflow: hidden;
@@ -16,6 +40,11 @@
   }
 }
 
+.front, .back {
+  transition: transform 1s;
+  backface-visibility: hidden;
+}
+
 .image {
   width: 100%;
   height: 200px;
@@ -23,10 +52,15 @@
 
 .service {
   height: 100%;
+  width: calc(100% - 40px);
   margin: 0 20px;
+}
 
-  &:hover {
-    animation: bounceIn  ease-in-out .75s forwards;
+.sub-items {
+  margin-bottom: 8px;
+
+  &:nth-child(odd) {
+    color: #297A4A;
   }
 }
 
