--- a/src/views/Services/Services.scss
+++ b/src/views/Services/Services.scss
@@ -15,6 +15,7 @@
 
 // https://stackoverflow.com/questions/41461101/flip-a-3d-card-with-css
 .card {
+  margin-top: 48px;
   position: relative;
   perspective: 30rem;
 
@@ -33,10 +34,10 @@
 
 .container {
   height: 100%;
-  overflow: hidden;
 
   .services {
-    margin: 70px 0;
+    flex-wrap: wrap;
+    margin: 24px 0 0;
   }
 }
 
@@ -65,6 +66,7 @@
 }
 
 .title {
-  margin-top: 50px;
+  margin: 0;
   text-align: center;
+  padding: 48px 0 24px;
 }
