Add box-shadow for about block

--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -11,15 +11,16 @@
 }
 
 .about {
-  grid-area: body;
-  align-self: center;
-  justify-self: center;
-  animation: monitorIn 1s ease-in-out forwards;
   align-items: center;
+  align-self: center;
+  animation: monitorIn 1s ease-in-out forwards;
   background-color: #FFFFFF;
   border-radius: 20px;
+  box-shadow: 0 0 8px 8px #FFFFFF;
   flex-direction: column;
+  grid-area: body;
   justify-content: center;
+  justify-self: center;
   max-height: 90%;
   opacity: 0.5;
   overflow: scroll;
