--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -133,80 +133,21 @@
         background-color: #00BC7E;
       }
     }
-
-    .name {
-      align-items: center;
-      display: flex;
-      height: 60px;
-      margin: 0;
-    }
   }
-}
 
-.home {
-  background-image: url('../../assets/images/home_background.png');
-  background-size: cover;
-  box-shadow: 0 0 8px 8px #FBFBFF inset;
-  display: grid;
-  grid-template-columns: .5fr 1fr 1fr .5fr;
-  /* for left and right sections */
-  grid-gap: 10px;
-  grid-template-areas: ". left right .";
-  height: 100%;
-  width: 100%;
-
-  .left-content {
-    align-self: center;
+  .name {
+    align-items: center;
     display: flex;
-    flex-direction: column;
-    font-family: 'Permanent Marker', sans-serif;
-    grid-area: left;
-    justify-self: center;
+    text-decoration: none;
+    height: 60px;
+    margin: 0;
 
-    .logo {
-      height: 150px;
-      width: 150px;
-    }
-  }
-
-  .right-content {
-    grid-area: right;
-    align-self: center;
-    justify-self: center;
-
-    img.elements {
-      width: 200px;
-      height: 40px;
-      z-index: 2;
+    &:active, &:link, &:visited {
+      color: #000000;
     }
 
-    .account {
-      margin-top: 0%;
-      margin-left: 9%;
-      animation: chatblips .5s ease-in-out .5s forwards; /* assign animation to dash with 'chatblips' as keyframe name */
-      opacity: 0;
-    }
-
-    .cloud {
-      height: 300px;
-      opacity: 0.5;
-      position: absolute;
-      top: calc(30% + 20px);
-      width: 300px;
-    }
-
-    .recommend {
-      margin-top: 9%;
-      margin-left: 18%;
-      animation: chatblips .5s ease-in-out 1.5s forwards; /* assign animation to eth with 'chatblips' as keyframe name */
-      opacity: 0;
-    }
-
-    .search {
-      margin-top: 9%;
-      margin-left: 27%;
-      animation: chatblips .5s ease-in-out 2.5s forwards; /* assign animation to iota with 'chatblips' as keyframe name */
-      opacity: 0;
+    &:hover {
+      color: #00BC7E;
     }
   }
 }
