--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great');
-@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Caesar+Dressing|Uncial+Antiqua|Permanent+Marker');
 
 @keyframes chatblips{
   /* taken from http://angrytools.com/css/animation/ for bounce-in animation*/
@@ -64,12 +63,47 @@
   -webkit-font-smoothing: antialiased;
   background-color: #FBFBFF;
   display: flex;
+  font-family: 'Uncial Antiqua', sans-serif;
   flex-direction: row;
-  font-family: 'Fredericka the Great', sans-serif;
   justify-content: space-between;
   letter-spacing: 1px;
 
+  .company-name {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    height: 60px;
+    margin: 0;
+    text-align: center;
+    text-decoration: none;
+
+    &:active, &:link, &:visited {
+      color: #000000;
+      fill: #000000;
+    }
+
+    &:hover {
+      color: #00BC7E;
+
+      .logo {
+        fill: #00BC7E;
+      }
+    }
+
+    .name {
+      font-size: 1.5em;
+      margin-top: 20px;
+    }
+  }
+
+  .logo {
+    fill: #000000;
+    height: 48px;
+    width: 48px;
+  }
+
   .menu {
+    font-family: 'Fredericka the Great', sans-serif;
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -132,22 +166,6 @@
       &::after {
         background-color: #00BC7E;
       }
-    }
-  }
-
-  .name {
-    align-items: center;
-    display: flex;
-    text-decoration: none;
-    height: 60px;
-    margin: 0;
-
-    &:active, &:link, &:visited {
-      color: #000000;
-    }
-
-    &:hover {
-      color: #00BC7E;
     }
   }
 }
