--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -24,8 +24,9 @@
 
 #logo {
   animation: monitorInFromTop 1s ease-in-out forwards;
-  /* assign animation to monitor with 'monitorIn' as keyframe name */
+  height: 200px;
   opacity: 0;
+  width: 200px;
 }
 
 .login {
