--- a/src/components/Introduction/Introduction.scss
+++ b/src/components/Introduction/Introduction.scss
@@ -72,7 +72,7 @@
 }
 
 .bg2 {
-  background-image: url('../../assets/images/introduction/introduction_2.jpg');
+  background-image: url('../../assets/images/introduction/introduction_2.png');
 }
 
 .bg3::after {
