--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,7 +1,7 @@
 .content {
   align-items: center;
   align-self: center;
-  background-image: url('../../assets/images/about_background.png');
+  background-color: #FFFFFF;
   box-shadow: 0px 0px 8px 8px #FFFFFF inset;
   display: flex;
   flex-direction: column;
