--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Uncial+Antiqua');
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
 @keyframes monitorIn {
   from {
     transform: translateY(-200px);
@@ -6,7 +13,6 @@
 
   to {
     transform: translateY(0);
-    opacity: 0.5;
   }
 }
 
@@ -14,36 +20,45 @@
   align-items: center;
   align-self: center;
   animation: monitorIn 1s ease-in-out forwards;
-  background-color: #FFFFFF;
+  background-color: #FBFBFF;
   border-radius: 20px;
-  box-shadow: 0 0 8px 8px #FFFFFF;
+  box-shadow: 0 0 8px 8px #FBFBFF;
   flex-direction: column;
   grid-area: body;
   justify-content: center;
   justify-self: center;
   max-height: 90%;
-  opacity: 0.5;
   overflow: scroll;
   padding: 24px;
 
   .title {
-    text-align: center;
+    font-family: 'Uncial Antiqua', sans-serif;
+    font-size: 36px;
+    margin-top: 0px;
+    text-transform: uppercase;
   }
 }
 
 .container {
-  background-image: url('../../assets/images/about_background.png');
-  background-repeat: repeat-y;
-  background-size: cover;
   box-shadow: 0 0 8px 8px #FBFBFF inset;
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: 1fr 50% 1fr;
-  grid-template-rows: 50px auto 50px;
+  grid-template-columns: 70% 1fr;
+  grid-template-rows: 50px auto 40% 50px;
   grid-template-areas:
-    "header header header"
-    ". body ."
-    "footer footer footer";
+    "header header"
+    "body ."
+    "body logo"
+    "footer footer";
   height: 100%;
+  width: 100%;
+}
+
+.logo {
+  animation: fadeIn 2s;
+  grid-area: logo;
+  height: 100%;
+  justify-content: center;
+  justify-self: center;
   width: 100%;
 }
