--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -60,5 +60,9 @@
   height: 100%;
   justify-content: center;
   justify-self: center;
+  max-height: 230px;
+  max-width: 290px;
+  min-height: 150px;
+  min-width: 190px;
   width: 100%;
 }
