--- a/theme/index.css
+++ b/theme/index.css
@@ -39631,13 +39631,13 @@
   border-bottom: 1px solid #ebeef5; }
 
 .el-collapse-item__header {
-  height: 48px;
-  line-height: 48px;
-  background-color: #fff;
+  height: 60px;
+  line-height: 60px;
+  background-color: #FBFBFF;
   color: #303133;
   cursor: pointer;
   border-bottom: 1px solid #ebeef5;
-  font-size: 13px;
+  font-size: 16px;
   font-weight: 500;
   -webkit-transition: border-bottom-color .3s;
   transition: border-bottom-color .3s;
@@ -39661,7 +39661,7 @@
 
 .el-collapse-item__wrap {
   will-change: height;
-  background-color: #fff;
+  background-color: #FBFBFF;
   overflow: hidden;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -39669,7 +39669,7 @@
 
 .el-collapse-item__content {
   padding-bottom: 25px;
-  font-size: 13px;
+  font-size: 16px;
   color: #303133;
   line-height: 1.769230769230769; }
 
